      upgrades, and we already have the automatic per-file symlinking.
    - debian/rules: Add an epoch to libgudev.
    - Don't install 80-networking.rules and the Debian *.agent scripts, we
      never supported them in Ubuntu.
    - Keep our much simpler udev maintainer scripts (all platforms must
      support udev, no debconf).

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 01 Dec 2014 15:41:09 +0100

systemd (217-4) UNRELEASED; urgency=medium

  * Reinstate a debian/extra/rules/50-firmware.rules which immediately tells
    the kernel that userspace firmware loading failed. Otherwise it tries for a
    minute to call the userspace helper (if CONFIG_FW_LOADER_USER_HELPER is
    enabled) in vain, which causes long delays with devices which have a range
    of possible firmware versions. (LP: #1398458)

 -- Martin Pitt <mpitt@debian.org>  Tue, 02 Dec 2014 18:47:43 +0100

systemd (217-3) experimental; urgency=medium

  [ Martin Pitt ]
  * systemd.bug-script: Really capture stderr of systemd-delta.
    (Closes: #771498)
  * boot-and-services autopkgtest: Give test apparmor job some time to
    actually finish.

  [ Didier Roche ]
  * updated debian/patches/insserv.conf-generator.patch:
    - if /etc/X11/default-display-manager doesn't match a systemd unit
      (or doesn't exist), be less agressive about what to mask: we let
      all sysvinit-only display-manager units enabled to fallback to previous
      behavior and let them starting. (Closes: #771739)

 -- Martin Pitt <mpitt@debian.org>  Tue, 02 Dec 2014 16:53:36 +0100

systemd (217-2) experimental; urgency=medium

  * Re-enable journal forwarding to syslog, until Debian's sysloggers
    can/do all read from the journal directly.
  * Fix hostnamectl exit code on success.
  * Fix "diff failed with error code 1" spew with systemd-delta.
    (Closes: #771397)
  * Re-enable systemd-resolved. This wasn't meant to break the entire
    networkd, just disable the new NSS module. Remove that one manually